--- a/src/proposal-no-auth.html
+++ b/src/proposal-no-auth.html
@@ -9,11 +9,42 @@
 </head>
 
 <body>
-<div class="header">
-
-</div>
+<header class="header">
+    <div class="header__container container-fluid">
+        <div class="header__search">
+            <a href="/" class="header__search-reset header__search-reset--outside">
+                <img src="img/icons/back-arrow.svg" alt="">
+            </a>
+            <label class="search-input">
+                <input type="text" class="form-control base-input search-input__field" placeholder="Поиск продукции">
+                <button class="search-input__btn">
+                    <img src="img/icons/search-gray.svg" alt="">
+                </button>
+                <a class="header__search-reset header__search-reset--inside">
+                    <img src="img/icons/close-dark.svg" alt="">
+                </a>
+            </label>
+        </div>
+        <div class="header__menu">
+            <a href="#header-menu" class="header__menu-btn js-header-menu" data-effect="mfp-move-from-right">
+                <span></span>
+                <span></span>
+            </a>
+        </div>
+    </div>
+    <div class="header__dropdown container-fluid">
+        <a href="" class="link dark catalog-link">
+            <span>Лист рифленый</span>
+            <img src="img/icons/arrow.svg" class="catalog-link__icon" alt="">
+        </a>
+        <a href="" class="link dark catalog-link">
+            <span>Тендеры</span>
+            <img src="img/icons/arrow.svg" class="catalog-link__icon" alt="">
+        </a>
+    </div>
+</header>
 <div class="content">
-    <ul class="breadcrumbs container-fluid">
+    <ul class="breadcrumbs container-fluid mb-3">
         <li class="breadcrumbs__item">
             <a href="#" class="breadcrumbs__link">Заявки покупателей</a>
         </li>
@@ -111,59 +142,87 @@
         </label>
         <button type="submit" class="btn btn-primary block">Войти и ответить на заявку</button>
     </form>
+</div>
 
-    <menu class="menu">
-        <ul class="menu__list">
-            <li class="menu__item">
-                <a href="" class="menu__link active">
-                    <img src="img/icons/menu-main.svg" alt="" class="menu__icon">
-                    <img src="img/icons/menu-main-active.svg" alt="" class="menu__icon menu__icon--active">
-                    <p class="menu__name">
-                        Главная
-                    </p>
-                </a>
+<footer class="footer-menu">
+    <ul class="footer-menu__list">
+        <li class="footer-menu__item">
+            <a href="" class="footer-menu__link active">
+                <img src="img/icons/menu-main.svg" alt="" class="footer-menu__icon">
+                <img src="img/icons/menu-main-active.svg" alt="" class="footer-menu__icon footer-menu__icon--active">
+                <p class="footer-menu__name">
+                    Главная
+                </p>
+            </a>
+        </li>
+        <li class="footer-menu__item">
+            <a href="" class="footer-menu__link">
+                <img src="img/icons/menu-catalog.svg" alt="" class="footer-menu__icon">
+                <img src="img/icons/menu-catalog-active.svg" alt="" class="footer-menu__icon footer-menu__icon--active">
+                <p class="footer-menu__name">
+                    Каталог
+                </p>
+            </a>
+        </li>
+        <li class="footer-menu__item">
+            <a href="" class="footer-menu__link">
+                <img src="img/icons/menu-location.svg" alt="" class="footer-menu__icon">
+                <img src="img/icons/menu-location-active.svg" alt=""
+                     class="footer-menu__icon footer-menu__icon--active">
+                <p class="footer-menu__name">
+                    Москва
+                </p>
+            </a>
+        </li>
+        <li class="footer-menu__item">
+            <a href="" class="footer-menu__link">
+                <img src="img/icons/menu-basket.svg" alt="" class="footer-menu__icon">
+                <img src="img/icons/menu-basket-active.svg" alt="" class="footer-menu__icon footer-menu__icon--active">
+                <p class="footer-menu__name">
+                    Корзина
+                </p>
+            </a>
+        </li>
+        <li class="footer-menu__item">
+            <a href="" class="footer-menu__link">
+                <img src="img/icons/menu-profile.svg" alt="" class="footer-menu__icon">
+                <img src="img/icons/menu-profile-active.svg" alt="" class="footer-menu__icon footer-menu__icon--active">
+                <p class="footer-menu__name">
+                    Профиль
+                </p>
+            </a>
+        </li>
+    </ul>
+</footer>
+
+<div id="header-menu" class="header-menu mfp-with-anim mfp-hide">
+    <div class="header-menu__content">
+        <ul class="header-menu__list">
+            <li class="header-menu__item">
+                <a href="" class="header-menu__link link dark">Объявления</a>
             </li>
-            <li class="menu__item">
-                <a href="" class="menu__link">
-                    <img src="img/icons/menu-catalog.svg" alt="" class="menu__icon">
-                    <img src="img/icons/menu-catalog-active.svg" alt="" class="menu__icon menu__icon--active">
-                    <p class="menu__name">
-                        Каталог
-                    </p>
-                </a>
+            <li class="header-menu__item">
+                <a href="" class="header-menu__link link dark">Услуги</a>
             </li>
-            <li class="menu__item">
-                <a href="" class="menu__link">
-                    <img src="img/icons/menu-location.svg" alt="" class="menu__icon">
-                    <img src="img/icons/menu-location-active.svg" alt="" class="menu__icon menu__icon--active">
-                    <p class="menu__name">
-                        Москва
-                    </p>
-                </a>
+            <li class="header-menu__item">
+                <a href="" class="header-menu__link link dark">Реклама</a>
             </li>
-            <li class="menu__item">
-                <a href="" class="menu__link">
-                    <img src="img/icons/menu-basket.svg" alt="" class="menu__icon">
-                    <img src="img/icons/menu-basket-active.svg" alt="" class="menu__icon menu__icon--active">
-                    <p class="menu__name">
-                        Корзина
-                    </p>
-                </a>
+            <li class="header-menu__item">
+                <a href="" class="header-menu__link link dark">Справочник</a>
             </li>
-            <li class="menu__item">
-                <a href="" class="menu__link">
-                    <img src="img/icons/menu-profile.svg" alt="" class="menu__icon">
-                    <img src="img/icons/menu-profile-active.svg" alt="" class="menu__icon menu__icon--active">
-                    <p class="menu__name">
-                        Профиль
-                    </p>
-                </a>
+            <li class="header-menu__item">
+                <a href="" class="header-menu__link link dark">Черный список</a>
+            </li>
+            <li class="header-menu__item">
+                <a href="" class="header-menu__link link dark">Контакты</a>
             </li>
         </ul>
-    </menu>
-</div>
-<div class="footer">
-
+        <div class="header-menu__footer">
+            <p class="sm grey">Отдел Продаж:
+                <a href="tel:84992705845" class="link sm dark"><strong>8 (499) 270 58 45</strong></a>
+            </p>
+        </div>
+    </div>
 </div>
 
 </body>
