первых 7 страниц второго ряда

--- a/src/proposals.html
+++ b/src/proposals.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="proposal-card__action container-fluid pt-3 pb-3">
-            <a href="" class="btn btn-primary block">Ответить на заявку</a>
+            <a href="" class="btn sm btn-primary block">Ответить на заявку</a>
         </div>
     </div>
     <div class="proposal-card">
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="proposal-card__action container-fluid pt-3 pb-3">
-            <a href="" class="btn btn-primary block">Ответить на заявку</a>
+            <a href="" class="btn sm btn-primary block">Ответить на заявку</a>
         </div>
     </div>
     <div class="proposal-card">
@@ -175,7 +175,7 @@
             </div>
         </div>
         <div class="proposal-card__action container-fluid pt-3 pb-3">
-            <a href="" class="btn btn-primary block">Ответить на заявку</a>
+            <a href="" class="btn sm btn-primary block">Ответить на заявку</a>
         </div>
     </div>
     <div class="proposal-card">
@@ -213,7 +213,7 @@
             </div>
         </div>
         <div class="proposal-card__action container-fluid pt-3 pb-3">
-            <a href="" class="btn btn-primary block">Ответить на заявку</a>
+            <a href="" class="btn sm btn-primary block">Ответить на заявку</a>
         </div>
     </div>
 
