--- a/src/tenders.html
+++ b/src/tenders.html
@@ -95,12 +95,12 @@
             </div>
             <div class="tender-card__section container-fluid">
                 <div class="tender-card__row mb-2">
-                    <span class="text sm"><strong>Сумма контракта</strong></span>
-                    <span class="text sm"><strong>не указана</strong></span>
+                    <span class="text xs"><strong>Сумма контракта</strong></span>
+                    <span class="text xs"><strong>не указана</strong></span>
                 </div>
                 <div class="tender-card__row">
-                    <span class="text sm"><strong>Статус</strong></span>
-                    <span class="text green sm"><strong>Идут торги</strong></span>
+                    <span class="text xs"><strong>Статус</strong></span>
+                    <span class="text green xs"><strong>Идут торги</strong></span>
                 </div>
             </div>
             <div class="tender-card__footer container-fluid">
@@ -126,12 +126,12 @@
             </div>
             <div class="tender-card__section container-fluid">
                 <div class="tender-card__row mb-2">
-                    <span class="text sm"><strong>Сумма контракта</strong></span>
-                    <span class="text sm"><strong>не указана</strong></span>
+                    <span class="text xs"><strong>Сумма контракта</strong></span>
+                    <span class="text xs"><strong>не указана</strong></span>
                 </div>
                 <div class="tender-card__row">
-                    <span class="text sm"><strong>Статус</strong></span>
-                    <span class="text green sm"><strong>Идут торги</strong></span>
+                    <span class="text xs"><strong>Статус</strong></span>
+                    <span class="text green xs"><strong>Идут торги</strong></span>
                 </div>
             </div>
             <div class="tender-card__footer container-fluid">
@@ -157,12 +157,12 @@
             </div>
             <div class="tender-card__section container-fluid">
                 <div class="tender-card__row mb-2">
-                    <span class="text sm"><strong>Сумма контракта</strong></span>
-                    <span class="text sm"><strong>не указана</strong></span>
+                    <span class="text xs"><strong>Сумма контракта</strong></span>
+                    <span class="text xs"><strong>не указана</strong></span>
                 </div>
                 <div class="tender-card__row">
-                    <span class="text sm"><strong>Статус</strong></span>
-                    <span class="text green sm"><strong>Идут торги</strong></span>
+                    <span class="text xs"><strong>Статус</strong></span>
+                    <span class="text green xs"><strong>Идут торги</strong></span>
                 </div>
             </div>
             <div class="tender-card__footer container-fluid">
@@ -188,11 +188,11 @@
             </div>
             <div class="tender-card__section container-fluid">
                 <div class="tender-card__row mb-2">
-                    <span class="text sm"><strong>Сумма контракта</strong></span>
-                    <span class="text sm"><strong>не указана</strong></span>
+                    <span class="text xs"><strong>Сумма контракта</strong></span>
+                    <span class="text xs"><strong>не указана</strong></span>
                 </div>
                 <div class="tender-card__row">
-                    <span class="text sm"><strong>Статус</strong></span>
+                    <span class="text xs"><strong>Статус</strong></span>
                     <span class="text grey sm"><strong>Торги завершены</strong></span>
                 </div>
             </div>
