модалки 2-го ряда

--- a/src/ceni-postavshikov.html
+++ b/src/ceni-postavshikov.html
@@ -280,12 +280,12 @@
     </div>
 </div>
 
-<div id="filter-modal" class="modal-filter mfp-with-anim mfp-hide">
-    <div class="modal-filter__head">
+<div id="filter-modal" class="base-modal mfp-with-anim mfp-hide">
+    <div class="base-modal__head">
         <p><strong>Фильтр</strong></p>
     </div>
-    <div class="modal-filter__body">
-        <form class="modal-filter__content container-fluid">
+    <div class="base-modal__body">
+        <form class="base-modal__content container-fluid">
             <div class="accordion filter-collapse" id="accordionExample">
                 <div class="filter-collapse">
                     <div class="filter-collapse__head" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
@@ -422,8 +422,8 @@
 
         </form>
     </div>
-    <div class="modal-filter__footer container-fluid pt-2 pb-2">
-        <button class="btn btn-primary block">Применить</button>
+    <div class="base-modal__footer container-fluid pt-2 pb-2">
+        <button class="btn btn-primary block js-modal-close">Применить</button>
     </div>
 </div>
 
