basket + add-proposal-purchase

--- a/src/add-announcement.html
+++ b/src/add-announcement.html
@@ -84,7 +84,7 @@
 
             <label class="materil-group mb-4">
                 <span class="materil-group__sublabel">Город <span class="red">*</span></span>
-                <select name="" id="" class="select select--sm">
+                <select name="" id="" class="select">
                     <option value="1">Москва</option>
                     <option value="2">Ростов</option>
                     <option value="2">Казань</option>
@@ -106,7 +106,7 @@
 
             <label class="materil-group mb-4">
                 <span class="materil-group__sublabel">Тип объявления <span class="red">*</span></span>
-                <select name="" id="" class="select select--sm">
+                <select name="" id="" class="select">
                     <option value="1">Куплю</option>
                     <option value="2">Продам</option>
                 </select>
@@ -120,7 +120,7 @@
             <label class="materil-group mb-4">
                 <span class="materil-group__label">Содержание</span>
                 <textarea class="form-control base-input materil-group__input materil-group__textarea">Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили распространение в капитальном строительстве.
-            </textarea>
+                </textarea>
                 <span class="materil-group__label-backdrop"></span>
             </label>
             <button class="btn btn-primary block mb-32">Добавить объявление</button>
