--- a/src/proposal-auth.html
+++ b/src/proposal-auth.html
@@ -136,7 +136,7 @@
             </div>
             <div class="proposal-card__field-label">Руб. за</div>
             <div class="proposal-card__field proposal-card__field--count">
-                <select name="" id="" class="select select--sm">
+                <select name="" id="" class="select">
                     <option value="1">шт</option>
                     <option value="2">т</option>
                 </select>
@@ -169,7 +169,7 @@
             </div>
             <div class="proposal-card__field-label">Руб. за</div>
             <div class="proposal-card__field proposal-card__field--count">
-                <select name="" id="" class="select select--sm">
+                <select name="" id="" class="select">
                     <option value="1">шт</option>
                     <option value="2">т</option>
                 </select>
