phone and select

--- a/src/my-company.html
+++ b/src/my-company.html
@@ -61,7 +61,7 @@
         </label>
         <label class="materil-group personal-information-input">
             <span class="materil-group__label">Телефон для связи*</span>
-            <input type="text" class="form-control base-input materil-group__input lg">
+            <input type="text" class="form-control base-input materil-group__input lg phone-input">
         </label>
         <label class="materil-group personal-information-input">
             <span class="materil-group__label">Электронная почта для связи*</span>
