--- a/src/ui.html
+++ b/src/ui.html
@@ -207,6 +207,22 @@
                 </label>
             </div>
         </div>
+
+        <h2>Selects</h2>
+        <div class="form-group">
+            <label class="materil-group active">
+                <span class="materil-group__label">Город*</span>
+                <select name="" id="" class="select">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                </select>
+            </label>
+        </div>
+
         <h3>Пагинация</h3>
         <div class="form-group">
             <div class="pagination">
