--- a/src/add-price-list.html
+++ b/src/add-price-list.html
@@ -87,7 +87,7 @@
                     </label>
                     <label class="materil-group mb-4">
                         <span class="materil-group__label">Телефон <span class="red">*</span></span>
-                        <input type="tel" class="form-control base-input materil-group__input">
+                        <input type="tel" class="form-control base-input materil-group__input phone-input">
                     </label>
                     <label class="materil-group mb-4">
                         <span class="materil-group__label">Организация <span class="red">*</span></span>
