--- a/src/personal-information.html
+++ b/src/personal-information.html
@@ -51,12 +51,24 @@
             <span class="materil-group__label">Ваше имя*</span>
             <input type="text" class="form-control base-input materil-group__input lg">
         </label>
-        <label class="materil-group personal-information-input">
-            <span class="materil-group__label">Ваш город*</span>
-            <!-- <input type="text" class="form-control base-input materil-group__input lg"> -->
-            <select name="" id="" class="select select--sm">
-                <option value="1">шт</option>
-                <option value="2">т</option>
+        <label class="materil-group personal-information-input active">
+            <span class="materil-group__label">Город*</span>
+            <select name="" id="" class="select">
+                <option value="Москва">Москва</option>
+                <option value="Санкт - Петербург">Санкт - Петербург</option>
+                <option value="Актау и Мангистау">Актау и Мангистау</option>
+                <option value="Москва">Москва</option>
+                <option value="Санкт - Петербург">Санкт - Петербург</option>
+                <option value="Актау и Мангистау">Актау и Мангистау</option>
+                <option value="Москва">Москва</option>
+                <option value="Санкт - Петербург">Санкт - Петербург</option>
+                <option value="Актау и Мангистау">Актау и Мангистау</option>
+                <option value="Москва">Москва</option>
+                <option value="Санкт - Петербург">Санкт - Петербург</option>
+                <option value="Актау и Мангистау">Актау и Мангистау</option>
+                <option value="Москва">Москва</option>
+                <option value="Санкт - Петербург">Санкт - Петербург</option>
+                <option value="Актау и Мангистау">Актау и Мангистау</option>
             </select>
         </label>
         <label class="materil-group personal-information-input">
