--- a/src/add-announcement.html
+++ b/src/add-announcement.html
@@ -97,7 +97,7 @@
             </label>
             <label class="materil-group mb-4">
                 <span class="materil-group__label">Телефон <span class="red">*</span></span>
-                <input type="text" class="form-control base-input materil-group__input">
+                <input type="text" class="form-control base-input materil-group__input phone-input">
             </label>
             <label class="materil-group mb-4">
                 <span class="materil-group__label">Ваша организация <span class="red">*</span></span>
