--- a/src/ui.html
+++ b/src/ui.html
@@ -74,6 +74,9 @@
                     <div class="loader"></div>
                 </button>
             </div>
+            <div class="row">
+                <button class="btn btn-primary btn-block">Кнопка btn-block</button>
+            </div>
         </div>
         <h3>Кнопки маленькие</h3>
         <div class="form-group">
