--- a/src/basket.html
+++ b/src/basket.html
@@ -49,7 +49,7 @@
         <h4 class="mb-12">Корзина</h4>
         <div class="d-flex justify-content-between mb-4">
             <p><strong>Заявка</strong></p>
-            <a href="" class="link">Выбрать позиции</a>
+            <a href="#choose-position" class="link js-choose-position">Выбрать позиции</a>
         </div>
 
         <div class="basket-card mb-4">
@@ -288,6 +288,294 @@
             <p class="sm grey">Отдел Продаж:
                 <a href="tel:84992705845" class="link sm dark"><strong>8 (499) 270 58 45</strong></a>
             </p>
+        </div>
+    </div>
+</div>
+
+<div id="choose-position" class="mfp-hide base-modal">
+    <div class="base-modal__head">
+        <p><strong>Выберите категории</strong></p>
+    </div>
+    <div class="base-modal__body">
+        <form class="base-modal__content container-fluid">
+            <div class="accordion filter-collapse" id="accordionExample">
+                <div class="filter-collapse">
+                    <div class="filter-collapse__head" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        <strong>ЖБИ</strong>
+                        <span class="filter-collapse__arrow">
+                            <img src="img/icons/arrow.svg" alt="">
+                        </span>
+
+                    </div>
+                    <div id="collapseOne" class="filter-collapse__body collapse show" aria-labelledby="headingOne" >
+                        <div class="filter-collapse__row">
+                            <label class="search-input">
+                                <input type="text" class="form-control base-input js-position-search" placeholder="Поиск">
+                            </label>
+                        </div>
+
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Балка" class="position-checkbox"/>
+                                <span class="text">Балка <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Ограждения" class="position-checkbox"/>
+                                <span class="text">Ограждения <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Плиты" class="position-checkbox"/>
+                                <span class="text">Плиты <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Кабельные каналы" class="position-checkbox"/>
+                                <span class="text">Кабельные каналы <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Блок" class="position-checkbox"/>
+                                <span class="text">Блок <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Бортовой камень" class="position-checkbox"/>
+                                <span class="text">Бортовой камень <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Бордюрный камень" class="position-checkbox"/>
+                                <span class="text">Бордюрный камень<span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Заборы" class="position-checkbox"/>
+                                <span class="text">Заборы<span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <a href="" class="link js-filter-show-more">
+                                <span>Показать все</span>
+                                <img src="img/icons/arrow-blue-small.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="filter-collapse__box">
+                            <div class="filter-collapse__row mt-12">
+                                <label>
+                                    <input type="checkbox" name="check-one" value="М-100" class="position-checkbox"/>
+                                    <span class="text">М-100 <span class="grey">(24)</span></span>
+                                </label>
+                            </div>
+                            <div class="filter-collapse__row">
+                                <label>
+                                    <input type="checkbox" name="check-one" value="М-100-2" class="position-checkbox"/>
+                                    <span class="text">М-100-2 <span class="grey">(24)</span></span>
+                                </label>
+                            </div>
+                            <div class="filter-collapse__row">
+                                <label>
+                                    <input type="checkbox" name="check-one" value="М-100-3" class="position-checkbox"/>
+                                    <span class="text">М-100-3 <span class="grey">(24)</span></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="filter-collapse">
+                    <div class="filter-collapse__head collapsed" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <strong>Фитинг для труб</strong>
+                        <span class="filter-collapse__arrow">
+                            <img src="img/icons/arrow.svg" alt="">
+                        </span>
+                    </div>
+                    <div id="collapseTwo" class="filter-collapse__body collapse" aria-labelledby="collapseTwo" >
+                        <div class="filter-collapse__row">
+                            <label class="search-input">
+                                <input type="text" class="form-control base-input js-position-search" placeholder="Поиск">
+                            </label>
+                        </div>
+
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Балка" class="position-checkbox"/>
+                                <span class="text">Балка <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Ограждения" class="position-checkbox"/>
+                                <span class="text">Ограждения <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Плиты" class="position-checkbox"/>
+                                <span class="text">Плиты <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Кабельные каналы" class="position-checkbox"/>
+                                <span class="text">Кабельные каналы <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Блок" class="position-checkbox"/>
+                                <span class="text">Блок <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Бортовой камень" class="position-checkbox"/>
+                                <span class="text">Бортовой камень <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Бордюрный камень" class="position-checkbox"/>
+                                <span class="text">Бордюрный камень<span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Заборы" class="position-checkbox"/>
+                                <span class="text">Заборы<span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <a href="" class="link js-filter-show-more">
+                                <span>Показать все</span>
+                                <img src="img/icons/arrow-blue-small.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="filter-collapse__box">
+                            <div class="filter-collapse__row mt-12">
+                                <label>
+                                    <input type="checkbox" name="check-one" value="М-100" class="position-checkbox"/>
+                                    <span class="text">М-100 <span class="grey">(24)</span></span>
+                                </label>
+                            </div>
+                            <div class="filter-collapse__row">
+                                <label>
+                                    <input type="checkbox" name="check-one" value="М-100-2" class="position-checkbox"/>
+                                    <span class="text">М-100-2 <span class="grey">(24)</span></span>
+                                </label>
+                            </div>
+                            <div class="filter-collapse__row">
+                                <label>
+                                    <input type="checkbox" name="check-one" value="М-100-3" class="position-checkbox"/>
+                                    <span class="text">М-100-3 <span class="grey">(24)</span></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="filter-collapse">
+                    <div class="filter-collapse__head collapsed" id="headingTree" data-toggle="collapse" data-target="#collapseTree" aria-expanded="false" aria-controls="collapseTree">
+                        <strong>Цемент и бетон</strong>
+                        <span class="filter-collapse__arrow">
+                            <img src="img/icons/arrow.svg" alt="">
+                        </span>
+                    </div>
+                    <div id="collapseTree" class="filter-collapse__body collapse" aria-labelledby="collapseTree" >
+                        <div class="filter-collapse__row">
+                            <label class="search-input">
+                                <input type="text" class="form-control base-input js-position-search" placeholder="Поиск">
+                            </label>
+                        </div>
+
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Балка" class="position-checkbox"/>
+                                <span class="text">Балка <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Ограждения" class="position-checkbox"/>
+                                <span class="text">Ограждения <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Плиты" class="position-checkbox"/>
+                                <span class="text">Плиты <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Кабельные каналы" class="position-checkbox"/>
+                                <span class="text">Кабельные каналы <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Блок" class="position-checkbox"/>
+                                <span class="text">Блок <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Бортовой камень" class="position-checkbox"/>
+                                <span class="text">Бортовой камень <span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Бордюрный камень" class="position-checkbox"/>
+                                <span class="text">Бордюрный камень<span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <label>
+                                <input type="checkbox" name="check-one" value="Заборы" class="position-checkbox"/>
+                                <span class="text">Заборы<span class="grey">(24)</span></span>
+                            </label>
+                        </div>
+                        <div class="filter-collapse__row">
+                            <a href="" class="link js-filter-show-more">
+                                <span>Показать все</span>
+                                <img src="img/icons/arrow-blue-small.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="filter-collapse__box">
+                            <div class="filter-collapse__row mt-12">
+                                <label>
+                                    <input type="checkbox" name="check-one" value="М-100" class="position-checkbox"/>
+                                    <span class="text">М-100 <span class="grey">(24)</span></span>
+                                </label>
+                            </div>
+                            <div class="filter-collapse__row">
+                                <label>
+                                    <input type="checkbox" name="check-one" value="М-100-2" class="position-checkbox"/>
+                                    <span class="text">М-100-2 <span class="grey">(24)</span></span>
+                                </label>
+                            </div>
+                            <div class="filter-collapse__row">
+                                <label>
+                                    <input type="checkbox" name="check-one" value="М-100-3" class="position-checkbox"/>
+                                    <span class="text">М-100-3 <span class="grey">(24)</span></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <div class="base-modal__footer container-fluid pt-2 pb-2">
+            <button class="btn btn-primary block js-modal-close">Применить</button>
         </div>
     </div>
 </div>
